[package]
name = "graphidx"
description = "Graph-based Index API with some syntactical sugar and utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphidx"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
num = "0.4.0"
num-traits = "0.2.14"
ndarray = "0.15" # Has to be the same as used by hdf5 to work
ndarray-rand = "0.14.0"
ndarray-linalg = {version="0.16.0", features = ["openblas-system"]}
ndarray-stats = "0.6.0"
rand = "0.8.5"
futures = "0.3.28"
paste = "1.0.12"
probability = "0.20.3"
indicatif = "0.17.3"
hdf5 = {version="0.8.1", optional=true}
rayon = "1.7.0"
half = {version="2.2.1", features=["num-traits"]}
numpy = {version="0.18.0", features=["half"], optional=true}
pyo3 = {version="0.18.3", features=["auto-initialize", "multiple-pymethods"], optional=true}
foldhash = "0.1.4"
generic_singleton = "0.5.0"
roaring = "0.10.10"

[features]
default = ["python"]
count_operations = []
python = ["numpy", "pyo3"]
hdf5 = ["dep:hdf5"]
nightly-features = []

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

